multiple file upload

--- a/templates/cloud/bulletin/folder-list.html
+++ b/templates/cloud/bulletin/folder-list.html
@@ -68,7 +68,7 @@
           <div class="card-body p-4">
             <ul class="list-unstyled folder-Categories-list mb-0">
               <li>
-                <a href="{% url 'file_list' %}" class="primary-link fs-20">과제협약<span class="badge bg-soft-info float-end">5</span></a>
+                <a href="{% url 'post_list' %}" class="primary-link fs-20">과제협약<span class="badge bg-soft-info float-end">5</span></a>
               </li>
               <li>
                 <a href="{% url 'job-list' %}" class="primary-link fs-20">연구개발계획서<span class="badge bg-soft-info float-end">10</span></a>
@@ -98,7 +98,7 @@
           <div class="card-body p-4">
             <ul class="list-unstyled folder-Categories-list mb-0">
               <li>
-                <a href="{% url 'file_list' %}" class="primary-link fs-20">원안위 데이터 전달<span class="badge bg-soft-info float-end">25</span></a>
+                <a href="{% url 'post_list' %}" class="primary-link fs-20">원안위 데이터 전달<span class="badge bg-soft-info float-end">25</span></a>
               </li>
               <li>
                 <a href="{% url 'job-list' %}" class="primary-link fs-20">URL 번역 원문<span class="badge bg-soft-info float-end">19</span></a>
@@ -123,7 +123,7 @@
           <div class="card-body p-4">
             <ul class="list-unstyled folder-Categories-list mb-0">
               <li>
-                <a href="{% url 'file_list' %}" class="primary-link fs-20">데이터<span class="badge bg-soft-info float-end">25</span></a>
+                <a href="{% url 'post_list' %}" class="primary-link fs-20">데이터<span class="badge bg-soft-info float-end">25</span></a>
               </li>
               <li>
                 <a href="{% url 'job-list' %}" class="primary-link fs-20">연구개발계획서<span class="badge bg-soft-info float-end">10</span></a>
