--- a/templates/cloud/bulletin/post-update.html
+++ b/templates/cloud/bulletin/post-update.html
@@ -136,7 +136,7 @@
 
           <div class="col-lg-12">
             <div class="text-end">
-              <a href="{% url 'file_list' %}" class="btn btn-success">뒤로가기</a>
+              <a href="{% url 'post_list' %}" class="btn btn-success">뒤로가기</a>
               <a href="javascript:void(0)" class="btn btn-primary">업로드 <i class="mdi mdi-send"></i></a>
             </div>
           </div>
