--- a/templates/cloud/bulletin/folder-list.html
+++ b/templates/cloud/bulletin/folder-list.html
@@ -59,6 +59,7 @@
       <!--end col-->
     </div>
     <!--end row-->
+
     <div class="row justify-content-center">
       <div class="col-lg-6">
         <div class="text-center">
@@ -66,26 +67,20 @@
         </div>
         <div class="card folder-Categories-box bg-light border-0">
           <div class="card-body p-4">
+
             <ul class="list-unstyled folder-Categories-list mb-0">
+              {% for folder in folders %}
+              {% if folder.sector == '1' %}
               <li>
-                <a href="{% url 'post_list' %}" class="primary-link fs-20">과제협약<span class="badge bg-soft-info float-end">5</span></a>
+                <a href="{% url 'post_list' folder_id=1 %}" class="primary-link fs-20">{{ folder.title }}<span class="badge bg-soft-info float-end">25</span></a>
               </li>
-              <li>
-                <a href="{% url 'job-list' %}" class="primary-link fs-20">연구개발계획서<span class="badge bg-soft-info float-end">10</span></a>
-              </li>
-              <li>
-                <a href="{% url 'job-list' %}" class="primary-link fs-20">연차보고서<span class="badge bg-soft-info float-end">7</span></a>
-              </li>
-              <li>
-                <a href="{% url 'job-list' %}" class="primary-link fs-20">중간보고서<span class="badge bg-soft-info float-end">3</span></a>
-              </li>
-              <li>
-                <a href="{% url 'job-list' %}" class="primary-link fs-20">N-star 보고서<span class="badge bg-soft-info float-end">2</span></a>
-              </li>
+              {% endif %}
+              {% endfor %}
               <li>
                 <a href="#" class="primary-link fs-20">+</a>
               </li>
             </ul>
+
           </div>
         </div>
       </div>
@@ -97,19 +92,20 @@
         <div class="card folder-Categories-box bg-light border-0">
           <div class="card-body p-4">
             <ul class="list-unstyled folder-Categories-list mb-0">
+              {% for folder in folders %}
+
+              {% if folder.sector == '2' %}
               <li>
-                <a href="{% url 'post_list' %}" class="primary-link fs-20">원안위 데이터 전달<span class="badge bg-soft-info float-end">25</span></a>
+                <a href="{% url 'post_list' folder_id=2 %}" class="primary-link fs-20">{{ folder.title }}<span class="badge bg-soft-info float-end">25</span></a>
               </li>
-              <li>
-                <a href="{% url 'job-list' %}" class="primary-link fs-20">URL 번역 원문<span class="badge bg-soft-info float-end">19</span></a>
-              </li>
-              <li>
-                <a href="{% url 'job-list' %}" class="primary-link fs-20">연차보고서<span class="badge bg-soft-info float-end">71</span></a>
-              </li>
+              {% endif %}
+              {% endfor %}
+
               <li>
                 <a href="#" class="primary-link fs-20">+</a>
               </li>
             </ul>
+
           </div>
         </div>
       </div>
@@ -121,29 +117,30 @@
         </div>
         <div class="card folder-Categories-box bg-light border-0">
           <div class="card-body p-4">
+
             <ul class="list-unstyled folder-Categories-list mb-0">
+              {% for folder in folders %}
+
+              {% if folder.sector == '3' %}
               <li>
-                <a href="{% url 'post_list' %}" class="primary-link fs-20">데이터<span class="badge bg-soft-info float-end">25</span></a>
+                <a href="{% url 'post_list' folder_id=3 %}" class="primary-link fs-20">{{ folder.title }}<span class="badge bg-soft-info float-end">25</span></a>
               </li>
-              <li>
-                <a href="{% url 'job-list' %}" class="primary-link fs-20">연구개발계획서<span class="badge bg-soft-info float-end">10</span></a>
-              </li>
-              <li>
-                <a href="{% url 'job-list' %}" class="primary-link fs-20">연차보고서<span class="badge bg-soft-info float-end">71</span></a>
-              </li>
-              <li>
-                <a href="{% url 'job-list' %}" class="primary-link fs-20">단계보고서<span class="badge bg-soft-info float-end">40</span></a>
-              </li>
+              {% endif %}
+              {% endfor %}
+
               <li>
                 <a href="#" class="primary-link fs-20">+</a>
               </li>
             </ul>
+
           </div>
         </div>
       </div>
 
       <!--end col-->
     </div>
+
+
     <!--end row-->
 
   </div>
