--- a/templates/cloud/bulletin/post-detail.html
+++ b/templates/cloud/bulletin/post-detail.html
@@ -116,7 +116,7 @@
       </div>
 
       <div class="col-lg-12">
-        <a class="btn btn-soft-primary m-2 float-end" href="{% url 'post_list' %}"> 목록으로 </a>
+        <a class="btn btn-soft-primary m-2 float-end" href="{% url 'post_list' folder_id='1' %}"> 목록으로 </a>
       </div>
 
     </div>
