--- a/templates/cloud/bulletin/post-list.html
+++ b/templates/cloud/bulletin/post-list.html
@@ -17,7 +17,7 @@
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4">'과제협약' 폴더</h3>
+          <h3 class="mb-4">{{ folder }} 폴더</h3>
           <div class="page-next">
             <nav class="d-inline-block" aria-label="breadcrumb text-center">
               <ol class="breadcrumb justify-content-center">
