--- a/templates/cloud/bulletin/post-upload.html
+++ b/templates/cloud/bulletin/post-upload.html
@@ -116,7 +116,7 @@
           <!--end col-->
           <div class="col-lg-12">
             <div class="text-end">
-              <a href="{% url 'post_list' folder_id='1' %}" class="btn btn-success">뒤로가기</a>
+              <a href="{{request.META.HTTP_REFERER}}" class="btn btn-success">뒤로가기</a>
               <button type="submit" class="btn btn-primary">업로드 <i class="mdi mdi-send"></i></button>
             </div>
           </div>
