--- a/templates/cloud/bulletin/post-list.html
+++ b/templates/cloud/bulletin/post-list.html
@@ -88,7 +88,7 @@
       </div>
 
       <div class="col-lg-12 mt-2">
-        <a class="btn btn-soft-primary m-2 float-end" href="{% url 'post_upload' %}"> 글 작성 </a>
+        <a class="btn btn-soft-primary m-2 float-end" href="{% url 'post_upload' folder_id=folder %}"> 글 작성 </a>
       </div>
 
     </div>
