--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -5,8 +5,7 @@
 <nav class="navbar navbar-expand-lg fixed-top sticky" id="navbar" style="margin-top:0 !important">
   <div class="container-fluid custom-container">
     <a class="navbar-brand text-dark fw-bold me-auto" href="{% url 'index'%}">
-      <img src="{% static 'images/logo-dark.png' %}" height="22" alt="" class="logo-dark" />
-      <img src="{% static 'images/logo-light.png' %}" height="22" alt="" class="logo-light" />
+      File Cloud
     </a>
     <div>
       <button class="navbar-toggler me-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse" aria-controls="navbarCollapse" aria-label="Toggle navigation">
