--- a/templates/rnd/create_case.html
+++ b/templates/rnd/create_case.html
@@ -89,7 +89,7 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary waves-effect" data-bs-dismiss="modal">취소</button>
-                    <button type="submit" name="cancle" class="btn btn-primary waves-effect waves-light">확인</button>
+                    <button type="submit" name="cancel" class="btn btn-primary waves-effect waves-light">확인</button>
                   </div>
                 </div><!-- /.modal-content -->
               </div><!-- /.modal-dialog -->
@@ -132,4 +132,5 @@
 <script src="{% static 'js/cloud/switcher.init.js' %}"></script>
 
 <script src="{% static 'js/app.js' %}"></script>
+<script src="{% static 'js/rnd/case.js' %}"></script>
 {% endblock javascript %}
