--- a/templates/rnd/case_detail.html
+++ b/templates/rnd/case_detail.html
@@ -25,7 +25,7 @@ th {
     <div class="row justify-content-center">
       <div class="col-md-6">
         <div class="text-center text-white">
-          <h3 class="mb-4">검토 상세 내용</h3>
+          <h3 class="mb-4">{{ case.title }}</h3>
 
         </div>
       </div>
@@ -56,7 +56,7 @@ th {
       <div class="col-lg-12">
 
         <div class="p-2" style="display:inline">
-          <i class="mdi mdi-calendar-clock"></i> last updated: 2023-05-12
+          <i class="mdi mdi-calendar-clock"></i> last updated: {{ case.update_date }}
         </div>
 
         <div class="border-bottom"></div>
@@ -65,31 +65,22 @@ th {
         <table class="table table-bordered mb-0">
           <tbody>
             <tr>
-              <th>제목</th>
-              <td>1차 보고서</td>
-              <th>조회수</th>
-              <td>12</td>
-            </tr>
-            <tr>
               <th>작성자</th>
-              <td>홍길동</td>
+              <td>{{ case.writer }}</td>
               <th>작성시간</th>
-              <td>2023-04-18</td>
+              <td>{{ case.creation_date|date:"Y-m-d" }}</td>
             </tr>
             <tr>
               <th>첨부파일</th>
               <td colspan="3">
                   <ul class="profile-document list-unstyled mb-0">
-                    <li>
+                    <li class="link" onclick=location.href="{% url 'rnd:download_regulation_file' filename=case.file %}">
                       <div class="profile-document-list d-flex align-items-center">
                         <div class="d-flex vertical-align-middle">
                           <p class="fs-14 mb-0">
-                            파일명
+                            {{ case.file }}
                           </p>
-                          <p class="fs-12 mb-0">({{ doc.document.file.size|filesizeformat }})</p>
-                        </div>
-                        <div class="ms-auto">
-                          <a class="fs-14 text-muted" onclick=location.href=''><i class="uil uil-import"></i></a>
+                          <p class="fs-12 mb-0">({{ case.file.size|filesizeformat }})</p>
                         </div>
                       </div>
                     </li>
@@ -99,7 +90,7 @@ th {
             </tr>
             <tr>
               <th>내용</th>
-              <td colspan="3" style="height:200px"></td>
+              <td colspan="3" style="height:200px">{{ case.summary }}</td>
             </tr>
           </tbody>
         </table>
