--- a/templates/cloud/partials/post_card.html
+++ b/templates/cloud/partials/post_card.html
@@ -3,7 +3,7 @@
   <div class="card-body p-4">
     <div class="row">
       <div class="col-lg-1">
-        <a href="company-details.html"><img src="{% static 'images/featured-job/img-01.png' %}" alt="" class="img-fluid rounded-3"></a>
+        <a href="#"><img src="{% static 'images/featured-job/img-01.png' %}" alt="" class="img-fluid rounded-3"></a>
       </div>
       <!--end col-->
       <div class="col-lg-9" onclick=location.href="{% url 'post_detail' post_id=post.id %}">
