--- a/templates/cloud/bulletin/post-upload.html
+++ b/templates/cloud/bulletin/post-upload.html
@@ -63,7 +63,7 @@
     {% endif %}
 
     {% if postform.errors %}
-    <span style="color: blue;">{{ form.errors }}</span>
+    <span style="color: blue;">{{ fileform.errors }}</span>
     {% endif %}
     <form method="post"  enctype="multipart/form-data">
       {% csrf_token %}
