--- a/templates/partials/rnd_navbar.html
+++ b/templates/partials/rnd_navbar.html
@@ -162,19 +162,22 @@
           </div>
         </div>
       </li>
+      {% if user.is_authenticated %}
       <li class="list-inline-item dropdown">
         <a href="javascript:void(0)" class="header-item" id="userdropdown" data-bs-toggle="dropdown" aria-expanded="false">
-          <img src="{% static 'images/profile.jpg' %}" alt="mdo" width="35" height="35" class="rounded-circle me-1"> <span class="d-none d-md-inline-block fw-medium">Hi, {{ user }}!</span>
+          <img src="{% static 'images/profile.jpg' %}" alt="mdo" width="35" height="35" class="rounded-circle me-1"> <span class="d-none d-md-inline-block fw-medium">안녕하세요, {{ user.username }}님!</span>
         </a>
         <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="userdropdown">
           <span class="dropdown-header">내 프로필</span>
 
           <li><a class="dropdown-item" href="{% url 'profile' %}">회원정보 관리</a></li>
           <li><a class="dropdown-item" href="{% url 'bookmark-jobs' %}">내 폴더</a></li>
-          <li><a class="dropdown-item" href="{% url 'sign-out' %}">로그아웃</a></li>
+          <li><a class="dropdown-item" href="{% url 'account:logout' %}?next={{ request.path }}">로그아웃</a></li>
         </ul>
       </li>
-
+      {% else %}
+      <a href="{% url 'account:login' %}?next={{ request.path }}">로그인</a>
+      {% endif %}
       <li>
         <div class="text-center p-3">
           <!-- light-dark mode -->
